@@ -1,3 +1,3 @@
-EBUILD ghostscript-0.ebuild 589 RMD160 bb959b0e8dfcda7cabcedc9e616aa8402483f645 SHA1 837703b9a850dd404b0b2691f231a148696e1552 SHA256 794a8ba827a66d010239f79cc3bdb7fefd57d43d54a1168449eb378feffa2a8f
-MISC ChangeLog 876 RMD160 86d8c3591dcb4d07582bf6c24ac60e42e99b4203 SHA1 31844a76f5a8246653975da368e2b39d0119c72f SHA256 ad871d869b4dd8a5076cafc4fb5f56268d55622ddc59d77765535cc7f7335771
+EBUILD ghostscript-0.ebuild 606 RMD160 825454db1cc5f9a1260dbb331e3dc94e679d9a29 SHA1 71b32293493f0acffe640943bb1a95242be44438 SHA256 96d8538f4b57c4d6c18c14f97a65c92fb75e324091cbbef86c74dbddfaaa7cc9
+MISC ChangeLog 996 RMD160 1b5393155d22897e5e64a97a0fd620f01df8c846 SHA1 57cb2302da3240307e0470cd70b3177300692909 SHA256 5c38008c262e425dab5288f61d3e5a3ee9a95767925f494c55de871b9791ff47
 MISC metadata.xml 161 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 SHA1 209c6a46e4cdd891980115e42ba419e3799f8088 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76
